--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <hr>
     <marquee>
         <h3 align="center">Immerse yourself in the breathtaking beauty of anime,where every frame tells a story beyond words.</h3>
-        <img src="image/land1.png" alt="" width="50%" height="50%">
+        <img src="image/land1.png" alt="" width="50%" height="50%" >
         <img src="image/land2.png" alt="" width="50%" height="50%">
         <img src="image/land3.png" alt="" width="50%" height="50%">
     </marquee>
@@ -34,5 +34,13 @@
     <a href="spyxfamily.html"><img src="image/port3.png" alt="" width="300px" height="400px"></a>
     <a href="naruto.html"><img src="image/port4.png" alt="" width="300px" height="400px"></a>
    <a href="parasyte.html"> <img src="image/port5.png" alt="" width="300px" height="400px"></a>
+   <div class="container">
+    <div class="image"><img src="port1.png" alt="" id="img1"></div>
+    <div class="image"><img src="port2.png" alt="" id="img2"></div>
+    <div class="image"><img src="port3.png" alt="" id="img3"></div>
+    <div class="image"><img src="port4.png" alt="" id="img4"></div>
+    <div class="image"><img src="port5.png" alt="" id="img5"></div>
+</div>
+   
 </body>
 </html>
