--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anime</title>
+    <link rel="stylesheet" href="style5.css">
         <link rel="icon" type="image/png" href="image/logo1.png"
 </head>
-<body style="background-color: peachpuff;">
+<body>
     <header>
         <img src="image/logo1.png" alt="" width="4%" height="4%" align="left">
-        <h1 style="font-size:50px;font-style: italic;text-align: center;">Anime Portal</h1>
+        <h1>Anime Portal</h1>
     </header>
     <hr>
     <nav>
@@ -18,29 +19,31 @@
     <a href="service.html" style="font-style: italic">Service Page</a>
     <a href="contact" style="font-style: italic">Contact Us</a>
     </nav>
-    <h3 style="font-style: italic;color: black;text-align: center;font-size: 25px;">Anime's Hidden Worlds</h3>
+    <h2>Anime's Hidden Worlds</h2>
     <hr>
     <hr>
     <marquee>
-        <h3 align="center">Immerse yourself in the breathtaking beauty of anime,where every frame tells a story beyond words.</h3>
-        <img src="image/land1.png" alt="" width="50%" height="50%" >
-        <img src="image/land2.png" alt="" width="50%" height="50%">
-        <img src="image/land3.png" alt="" width="50%" height="50%">
+        <h3 >Immerse yourself in the breathtaking beauty of anime,where every frame tells a story beyond words.</h3>
+        <img src="image/land1.png" alt="" width="30%" height="30%" >
+        <img src="image/land2.png" alt="" width="30%" height="30%">
+        <img src="image/land3.png" alt="" width="30%" height="30%">
     </marquee>
     <hr>
     <hr>
-    <a href="Drstone.html" width="5o%" height="50%"><img src="image/port1.png" alt="" width="300px" height="400px"></a>
-    <a href="Apothecarydiaries.html"><img src="image/port2.png" alt="" width="300px" height="400px"></a>
-    <a href="spyxfamily.html"><img src="image/port3.png" alt="" width="300px" height="400px"></a>
-    <a href="naruto.html"><img src="image/port4.png" alt="" width="300px" height="400px"></a>
-   <a href="parasyte.html"> <img src="image/port5.png" alt="" width="300px" height="400px"></a>
-   <div class="container">
-    <div class="image"><img src="port1.png" alt="" id="img1"></div>
-    <div class="image"><img src="port2.png" alt="" id="img2"></div>
-    <div class="image"><img src="port3.png" alt="" id="img3"></div>
-    <div class="image"><img src="port4.png" alt="" id="img4"></div>
-    <div class="image"><img src="port5.png" alt="" id="img5"></div>
-</div>
-   
+    <div class="container">
+        <div class="image">
+             <a href="Drstone.html" width="5o%" height="50%"><img src="image/port1.png" alt="" id="img1" ></a>
+        </div>
+
+        <div class="image"> <a href="Apothecarydiaries.html"><img src="image/port2.png" alt=""  id="img2" ></a>
+        </div>
+        <div class="image"><a href="spyxfamily.html"><img src="image/port3.png" alt="" id="img3" ></a>
+        </div>
+        <div class="image">    <a href="naruto.html"><img src="image/port4.png" alt="" id="img4" ></a>
+        </div>
+        <div class="image"><a href="parasyte.html"> <img src="image/port5.png" alt="" id="img5" ></a> 
+        </div>
+    </div>
+
 </body>
 </html>
